syntax  = "proto3";

// NETWORK SERVICES

message DiscoverServiceRequest {
    map<string, string> labels = 1;
}
message ServiceDiscoveryResponse {}

message PublishServiceRequest {
    map<string, string> labels = 1;
}
message PublishServiceResponse {}

message DelistServiceRequest {}
message DelistServiceResponse {}

message ExposeChannelRequest {
    map<string, string> labels = 1;
}
message ExposeChannelResponse {}

message ConcealChannelRequest {}
message ConcealChannelResponse {}

message CreateSessionRequest {
    map<string, string> labels = 1;
}
message CreateSessionResponse {}

message DestroySessionRequest {}
message DestroySessionResponse {}

service NetworkServices {
    rpc DiscoverService (DiscoverServiceRequest) returns (ServiceDiscoveryResponse);
    rpc PublishService (PublishServiceRequest) returns (PublishServiceResponse);
    rpc DelistService (DelistServiceRequest) returns (DelistServiceResponse);

    rpc ExposeChannel (ExposeChannelRequest) returns (ExposeChannelResponse);
    rpc ConcealChannel (ConcealChannelRequest) returns (ConcealChannelResponse);

    rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);
    rpc DestroySession (DestroySessionRequest) returns (DestroySessionResponse);
}
