syntax = "proto3";

package nsm;

enum NsmApiVersion {
    NSM_API_VERSION_1 = 0;
};

enum NsmPayload {
    NSM_PAYLOAD_IP = 0;
    NSM_PAYLOAD_ETHERNET = 1;
    NSM_PAYLOAD_MPLS = 2;
    NSM_PAYLOAD_VXLAN = 3;
    NSM_PAYLOAD_SRV6 = 4;
};

message NetworkServiceEndpoint {
    string name = 1;
    string uuid = 2;
};

message NetworkService {
    string name = 1;
    string uuid = 2;
    string selector = 3;

    message NsmChannel {
        string name = 1;
        NsmPayload payload = 2;
    };
    repeated NsmChannel channels = 4;
    NsmApiVersion version = 5;
};
